@@ -16,7 +16,7 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.env.TestEnvironment;
 import org.elasticsearch.test.ESTestCase;
-import org.elasticsearch.test.MockLogAppender;
+import org.elasticsearch.test.MockLog;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.watcher.ResourceWatcherService;
@@ -24,6 +24,7 @@ import org.elasticsearch.xcontent.XContentParseException;
 import org.elasticsearch.xpack.core.security.audit.logfile.CapturingLogger;
 import org.elasticsearch.xpack.core.security.authc.Authentication;
 import org.elasticsearch.xpack.core.security.authc.AuthenticationTestHelper;
+import org.elasticsearch.xpack.core.security.authc.service.ServiceAccountSettings;
 import org.elasticsearch.xpack.core.security.user.User;
 import org.junit.After;
 import org.junit.Before;
@@ -37,6 +38,7 @@ import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import static org.hamcrest.Matchers.containsString;
@@ -106,6 +108,65 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
 
         // user operator_1 with non realm auth type is not an operator
         assertFalse(fileOperatorUsersStore.isOperatorUser(Authentication.newRealmAuthentication(operator_1, fileRealm).token()));
+
+        assertTrue(
+            fileOperatorUsersStore.isOperatorUser(
+                AuthenticationTestHelper.builder()
+                    .realm()
+                    .serviceAccount(new User("elastic/kibana"))
+                    .metadata(
+                        Map.of(ServiceAccountSettings.TOKEN_SOURCE_FIELD, "file", ServiceAccountSettings.TOKEN_NAME_FIELD, "kibana-token")
+                    )
+                    .build(false)
+            )
+        );
+
+        assertFalse(
+            fileOperatorUsersStore.isOperatorUser(
+                AuthenticationTestHelper.builder()
+                    .realm()
+                    .serviceAccount(new User("not/listed"))
+                    .metadata(
+                        Map.of(ServiceAccountSettings.TOKEN_SOURCE_FIELD, "file", ServiceAccountSettings.TOKEN_NAME_FIELD, "kibana-token")
+                    )
+                    .build(false)
+            )
+        );
+
+        assertFalse(
+            fileOperatorUsersStore.isOperatorUser(
+                AuthenticationTestHelper.builder()
+                    .realm()
+                    .serviceAccount(new User("elastic/kibana"))
+                    .metadata(
+                        Map.of(ServiceAccountSettings.TOKEN_SOURCE_FIELD, "index", ServiceAccountSettings.TOKEN_NAME_FIELD, "kibana-token")
+                    )
+                    .build(false)
+            )
+        );
+        assertFalse(
+            fileOperatorUsersStore.isOperatorUser(
+                AuthenticationTestHelper.builder()
+                    .realm()
+                    .serviceAccount(new User("elastic/kibana"))
+                    .metadata(
+                        Map.of(ServiceAccountSettings.TOKEN_SOURCE_FIELD, "file", ServiceAccountSettings.TOKEN_NAME_FIELD, "not-listed")
+                    )
+                    .build(false)
+            )
+        );
+        final Authentication.RealmRef jwtRealm = new Authentication.RealmRef("jwt1", "jwt", randomAlphaOfLength(8));
+        assertTrue(
+            fileOperatorUsersStore.isOperatorUser(
+                AuthenticationTestHelper.builder().realm().user(new User("me@elastic.co", randomRoles())).realmRef(jwtRealm).build(false)
+            )
+        );
+        assertFalse(
+            fileOperatorUsersStore.isOperatorUser(
+                AuthenticationTestHelper.builder().realm().user(new User("you@elastic.co", randomRoles())).realmRef(jwtRealm).build(false)
+            )
+        );
+
     }
 
     public void testFileAutoReload() throws Exception {
@@ -114,28 +175,40 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
         Files.copy(sampleFile, inUseFile, StandardCopyOption.REPLACE_EXISTING);
 
         final Logger logger = LogManager.getLogger(FileOperatorUsersStore.class);
-        final MockLogAppender appender = new MockLogAppender();
-        appender.start();
-        Loggers.addAppender(logger, appender);
         Loggers.setLevel(logger, Level.TRACE);
 
-        try (ResourceWatcherService watcherService = new ResourceWatcherService(settings, threadPool)) {
-            appender.addExpectation(
-                new MockLogAppender.SeenEventExpectation(
+        try (
+            var mockLog = MockLog.capture(FileOperatorUsersStore.class);
+            ResourceWatcherService watcherService = new ResourceWatcherService(settings, threadPool)
+        ) {
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
                     "1st file parsing",
                     logger.getName(),
                     Level.INFO,
-                    "parsed [2] group(s) with a total of [3] operator user(s) from file [" + inUseFile.toAbsolutePath() + "]"
+                    "parsed [4] group(s) with a total of [5] operator user(s) from file [" + inUseFile.toAbsolutePath() + "]"
                 )
             );
 
             final FileOperatorUsersStore fileOperatorUsersStore = new FileOperatorUsersStore(env, watcherService);
             final List<FileOperatorUsersStore.Group> groups = fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups();
 
-            assertEquals(2, groups.size());
+            assertEquals(4, groups.size());
             assertEquals(new FileOperatorUsersStore.Group(Set.of("operator_1", "operator_2"), "file"), groups.get(0));
             assertEquals(new FileOperatorUsersStore.Group(Set.of("operator_3"), null), groups.get(1));
-            appender.assertAllExpectationsMatched();
+            assertEquals(
+                new FileOperatorUsersStore.Group(
+                    Set.of("elastic/kibana"),
+                    null,
+                    "_service_account",
+                    "token",
+                    "file",
+                    Set.of("kibana-token")
+                ),
+                groups.get(2)
+            );
+            assertEquals(new FileOperatorUsersStore.Group(Set.of("me@elastic.co"), "jwt1", "jwt", "realm", null, null), groups.get(3));
+            mockLog.assertAllExpectationsMatched();
 
             // Content does not change, the groups should not be updated
             try (BufferedWriter writer = Files.newBufferedWriter(inUseFile, StandardCharsets.UTF_8, StandardOpenOption.APPEND)) {
@@ -143,11 +216,11 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
             }
             watcherService.notifyNow(ResourceWatcherService.Frequency.HIGH);
             assertSame(groups, fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups());
-            appender.assertAllExpectationsMatched();
+            mockLog.assertAllExpectationsMatched();
 
             // Add one more entry
-            appender.addExpectation(
-                new MockLogAppender.SeenEventExpectation(
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
                     "updating",
                     logger.getName(),
                     Level.INFO,
@@ -159,32 +232,32 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
             }
             assertBusy(() -> {
                 final List<FileOperatorUsersStore.Group> newGroups = fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups();
-                assertEquals(3, newGroups.size());
-                assertEquals(new FileOperatorUsersStore.Group(Set.of("operator_4")), newGroups.get(2));
+                assertEquals(5, newGroups.size());
+                assertEquals(new FileOperatorUsersStore.Group(Set.of("operator_4")), newGroups.get(4));
             });
-            appender.assertAllExpectationsMatched();
+            mockLog.assertAllExpectationsMatched();
 
             // Add mal-formatted entry
-            appender.addExpectation(
-                new MockLogAppender.ExceptionSeenEventExpectation(
+            mockLog.addExpectation(
+                new MockLog.ExceptionSeenEventExpectation(
                     "mal-formatted",
                     logger.getName(),
                     Level.ERROR,
                     "Failed to parse operator users file",
                     XContentParseException.class,
-                    "[10:1] [operator_privileges.operator] failed to parse field [operator]"
+                    "[19:1] [operator_privileges.operator] failed to parse field [operator]"
                 )
             );
             try (BufferedWriter writer = Files.newBufferedWriter(inUseFile, StandardCharsets.UTF_8, StandardOpenOption.APPEND)) {
                 writer.append("  - blah\n");
             }
             watcherService.notifyNow(ResourceWatcherService.Frequency.HIGH);
-            assertEquals(3, fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups().size());
-            appender.assertAllExpectationsMatched();
+            assertEquals(5, fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups().size());
+            mockLog.assertAllExpectationsMatched();
 
             // Delete the file will remove all the operator users
-            appender.addExpectation(
-                new MockLogAppender.SeenEventExpectation(
+            mockLog.addExpectation(
+                new MockLog.SeenEventExpectation(
                     "file not exist warning",
                     logger.getName(),
                     Level.WARN,
@@ -194,14 +267,12 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
             );
             Files.delete(inUseFile);
             assertBusy(() -> assertEquals(0, fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups().size()));
-            appender.assertAllExpectationsMatched();
+            mockLog.assertAllExpectationsMatched();
 
             // Back to original content
             Files.copy(sampleFile, inUseFile, StandardCopyOption.REPLACE_EXISTING);
-            assertBusy(() -> assertEquals(2, fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups().size()));
+            assertBusy(() -> assertEquals(4, fileOperatorUsersStore.getOperatorUsersDescriptor().getGroups().size()));
         } finally {
-            Loggers.removeAppender(logger, appender);
-            appender.stop();
             Loggers.setLevel(logger, (Level) null);
         }
     }
@@ -269,6 +340,41 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
             assertEquals(new FileOperatorUsersStore.Group(Set.of("internal_system"), "file1"), groups.get(0));
             assertEquals(new FileOperatorUsersStore.Group(Set.of("operator_1", "operator_2")), groups.get(1));
         }
+
+        config = """
+            operator:
+              - realm_name: "file1"
+                usernames: ["internal_system"]
+              - realm_type: "_service_account"
+                usernames: ["elastic/fleet-server"]
+                auth_type: "token"
+                token_source: "index"
+                token_names: ["token1", "token2"]
+              - usernames: ["myprinc", "myprinc2"]
+                realm_type: "jwt"
+                realm_name: "jwt1"
+            """;
+
+        try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
+            final List<FileOperatorUsersStore.Group> groups = FileOperatorUsersStore.parseConfig(in).getGroups();
+            assertEquals(3, groups.size());
+            assertEquals(new FileOperatorUsersStore.Group(Set.of("internal_system"), "file1"), groups.get(0));
+            assertEquals(
+                new FileOperatorUsersStore.Group(
+                    Set.of("elastic/fleet-server"),
+                    null,
+                    "_service_account",
+                    "token",
+                    "index",
+                    Set.of("token1", "token2")
+                ),
+                groups.get(1)
+            );
+            assertEquals(
+                new FileOperatorUsersStore.Group(Set.of("myprinc", "myprinc2"), "jwt1", "jwt", "realm", null, null),
+                groups.get(2)
+            );
+        }
     }
 
     public void testParseInvalidConfig() throws IOException {
@@ -279,7 +385,10 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
             """;
         try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
             final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
-            assertThat(e.getCause().getCause().getMessage(), containsString("[realm_type] only supports [file]"));
+            assertThat(
+                e.getCause().getCause().getMessage(),
+                containsString("when [auth_type] is defined as [realm] then [realm_type] must be defined as [file] or [jwt]")
+            );
         }
 
         config = """
@@ -290,9 +399,29 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
 
         try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
             final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
-            assertThat(e.getCause().getCause().getMessage(), containsString("[auth_type] only supports [realm]"));
+            assertThat(e.getCause().getCause().getMessage(), containsString("[token_source] must be set when [auth_type] is [token]"));
+            assertThat(e.getCause().getCause().getMessage(), containsString("[token_names] must be set when [auth_type] is [token]"));
         }
 
+        config = """
+            operator:
+              - usernames: ["operator_1"]
+                auth_type: "token"
+                token_source: "invalid"
+                token_names: ["token1", "token2"]
+            """;
+
+        try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
+            final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
+            assertThat(
+                e.getCause().getCause().getMessage(),
+                containsString("[token_source] must be one of the following values [index,file]")
+            );
+            assertThat(
+                e.getCause().getCause().getMessage(),
+                containsString("[realm_type] requires [_service_account] when [auth_type] is [token]")
+            );
+        }
         config = """
             operator:
                 auth_type: "realm"
@@ -301,17 +430,68 @@ public class FileOperatorUsersStoreTests extends ESTestCase {
             final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
             assertThat(e.getCause().getMessage(), containsString("Required [usernames]"));
         }
+
+        config = """
+            operator:
+              - usernames: ["operator_1"]
+                realm_type: "jwt"
+            """;
+        try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
+            final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
+            assertThat(
+                e.getCause().getCause().getMessage(),
+                containsString("[realm_name] must be specified for realm types other than [_service_account,file,native,reserved]")
+            );
+        }
+
+        config = """
+            operator:
+              - realm_type: "_service_account"
+                usernames: ["elastic/fleet-server", "second/name"]
+                auth_type: "token"
+                token_source: "index"
+                token_names: ["token1", "token2"]
+            """;
+
+        try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
+            final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
+            assertThat(
+                e.getCause().getCause().getMessage(),
+                containsString("[usernames] must be a single value when auth_type is [token] and realm_type is [_service_account]")
+            );
+        }
+        config = """
+            operator:
+              - usernames: ["operator_1","operator_2"]
+                realm_type: "file"
+                token_source: "index"
+            """;
+
+        try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
+            final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
+            assertThat(e.getCause().getCause().getMessage(), containsString("[token_source] is not valid when [realm_type] is [file]"));
+        }
+        config = """
+            operator:
+              - usernames: ["operator_1","operator_2"]
+                token_names: ["name1"]
+            """;
+
+        try (ByteArrayInputStream in = new ByteArrayInputStream(config.getBytes(StandardCharsets.UTF_8))) {
+            final XContentParseException e = expectThrows(XContentParseException.class, () -> FileOperatorUsersStore.parseConfig(in));
+            assertThat(e.getCause().getCause().getMessage(), containsString("[token_names] is not valid when [realm_type] is [file]"));
+        }
     }
 
     private Path getOperatorUsersPath() throws IOException {
-        Path xpackConf = env.configFile();
+        Path xpackConf = env.configDir();
         Files.createDirectories(xpackConf);
         return xpackConf.resolve("operator_users.yml");
     }
 
     private Path writeOperatorUsers(String input) throws IOException {
         Path file = getOperatorUsersPath();
-        Files.write(file, input.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(file, input);
         return file;
     }
 
